--- a/src/main/java/com/qa/config/config.properties
+++ b/src/main/java/com/qa/config/config.properties
@@ -4,3 +4,16 @@ name=umer.hamdan10@gmail.com
 password=passau2019
 
 browser=chrome
+
+fromLocation=Passau
+toLocation=Darmstadt
+fromDate=Sat, 17.08.19
+fromTime=20:00
+
+classRadio=true
+
+adult=1 Erwachsener
+classe=1. Klasse
+
+2ndklasseRadioId=radio08
+1stklasseRadioId=radio07
